--- a/addtocart.html
+++ b/addtocart.html
@@ -9,10 +9,25 @@
     <script src="https://kit.fontawesome.com/92d70a2fd8.js" crossorigin="anonymous"></script>
 </head>
 
+<style>
+    .button {
+        display: inline-block;
+        padding: 10px 20px;
+        background-color: white;
+        color: black;
+        text-decoration: none;
+        border: 2px solid black;
+        border-radius: 5px;
+        font-size: 16px;
+        text-align: center;
+        cursor: pointer;
+    }
+</style>
+
 <body>
     <div>
         <nav>
-            <a href="Official.html" class="button">Go to visit store</a>
+            <a href="Official.html" class="button">Go to menu</a>
         </nav>
     </div>
     <div class="header">
