--- a/login.html
+++ b/login.html
@@ -7,6 +7,16 @@
     <link rel="stylesheet" href="stylelogin.css">
     <title>Dass login</title>
 
+    <style>
+         .submit-btn {
+            background-color: #000000;
+            color: white;
+            padding: 10px 20px;
+            border: none;
+            cursor: pointer;
+            font-size: 16px;
+         }
+    </style>
 </head>
 
 <body>
@@ -31,8 +41,9 @@
             </section>
         </div>
         <div class="input-submit">
-            <button class="submit-btn" id="submit"></button>
-            <label for="submit">Sign In</label>
+            <form action="Official.html" target="_blank">
+                <button type="submit" class="submit-btn">Sign In</button>
+            </form>
         </div>
         <div class="sign-up-link">
             <p>Don't have account <a href="#">Sign up</a></p>
