--- a/Official.html
+++ b/Official.html
@@ -22,12 +22,28 @@
       width: 100%;
       object-fit: cover;
     }
+
+    .button {
+            display: inline-block;
+            padding: 10px 20px;
+            background-color: white;
+            color: black;
+            text-decoration: none;
+            border: 2px solid black;
+            border-radius: 5px;
+            font-size: 16px;
+            text-align: center;
+            cursor: pointer;
+        }
   </style>
 
 </head>
 
 <body>
   <main>
+    <nav>
+      <a href="login.html" class="button">Go to Login page</a>
+    </nav>
     <header>
       <section>
         <div class="container">
