--- a/Official.html
+++ b/Official.html
@@ -28,13 +28,14 @@
             padding: 10px 20px;
             background-color: white;
             color: black;
-            text-decoration: none;
             border: 2px solid black;
             border-radius: 5px;
             font-size: 16px;
             text-align: center;
+            text-decoration: none;
             cursor: pointer;
         }
+
   </style>
 
 </head>
@@ -42,7 +43,7 @@
 <body>
   <main>
     <nav>
-      <a href="login.html" class="button">Go to Login page</a>
+      <a href="login.html" class="button">Back to Login</a>
     </nav>
     <header>
       <section>
@@ -50,7 +51,7 @@
           <div class="card">
             <a href="addtocart.html">
               <img
-                src="https://images.unsplash.com/photo-1632337948797-ba161d29532b?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                src="https://images.unsplash.com/photo-1632337948797-ba161d29532b?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""/>
             </a>
             <nav>
               <a href="addtocart.html" class="container"></a>
@@ -60,7 +61,7 @@
           <div class="card">
             <a href="addtocart.html">
               <img
-                src="https://images.unsplash.com/photo-1603252109303-2751441dd157?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                src="https://images.unsplash.com/photo-1603252109303-2751441dd157?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""/>
             </a>
             <nav>
               <a href="addtocart.html" class="card"></a>
@@ -70,7 +71,7 @@
           <div class="card">
             <a href="addtocart.html">
               <img
-                src="https://images.unsplash.com/photo-1553361371-9b22f78e8b1d?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                src="https://images.unsplash.com/photo-1553361371-9b22f78e8b1d?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""/>
             </a>
             <nav>
               <a href="addtocart.html" class="card"></a>
@@ -80,7 +81,7 @@
           <div class="card">
             <a href="addtocart.html">
               <img
-                src="https://images.unsplash.com/photo-1562986005-19082a4a9bbf?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" />
+                src="https://images.unsplash.com/photo-1562986005-19082a4a9bbf?q=80&w=1287&auto=format&fit=crop&ixlib=rb-4.0.3&ixid=M3wxMjA3fDB8MHxwaG90by1wYWdlfHx8fGVufDB8fHx8fA%3D%3D" alt=""/>
             </a>
             <a href="addtocart.html" class="card"></a>
           </div>
