--- a/addtocart.html
+++ b/addtocart.html
@@ -9,29 +9,14 @@
     <script src="https://kit.fontawesome.com/92d70a2fd8.js" crossorigin="anonymous"></script>
 </head>
 
-<style>
-    .button {
-        display: inline-block;
-        padding: 10px 20px;
-        background-color: white;
-        color: black;
-        text-decoration: none;
-        border: 2px solid black;
-        border-radius: 5px;
-        font-size: 16px;
-        text-align: center;
-        cursor: pointer;
-    }
-</style>
-
 <body>
     <div>
         <nav>
-            <a href="Official.html" class="button">Go to menu</a>
+            <a href="Official.html" class="button">Back to menu</a>
         </nav>
     </div>
     <div class="header">
-        <p class="logo">DasS Official store menu kids clothing</p>
+        <p class="logo">WINE</p>
         <div class="cart"><i class="fa-solid fa-cart-plus"></i>
             <p id="count">0</p>
         </div>
