--- a/login.html
+++ b/login.html
@@ -41,12 +41,12 @@
             </section>
         </div>
         <div class="input-submit">
-            <form action="Official.html" target="_blank">
+            <form action="menu.html" target="_blank">
                 <button type="submit" class="submit-btn">Sign In</button>
             </form>
         </div>
         <div class="sign-up-link">
-            <p>Don't have account <a href="#">Sign up</a></p>
+            <p>Don't have account <a href="signup.html">Sign up</a></p>
         </div>
     </div>
 
