--- a/addtocart.html
+++ b/addtocart.html
@@ -12,7 +12,7 @@
 <body>
     <div>
         <nav>
-            <a href="Official.html" class="button">Back to menu</a>
+            <a href="menu.html" class="button">Back to menu</a>
         </nav>
     </div>
     <div class="header">
